# WireDAQ

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  conftest.py  pyproject.toml  run_serial.py  run_slice.py
.github/workflows/: pages.yml  publish.yml  tests.yml
cmake/: WireDAQConfig.cmake.in
cpp/: README.md
cpp/test/: test_codec.cpp
crates/wiredaq-rs/: Cargo.toml  README.md
crates/wiredaq-rs/src/: lib.rs  protocol.rs  scenario.rs
docs/adr/: 0001-wire-ready-architecture.md  0002-clock-domain.md  0003-wire-format-specifics.md  0004-rust-lua-backend.md
docs/diagrams/: phase-pipeline.html
examples/: encode_decode.cpp
firmware/: Makefile  README.md
firmware/codec/: wiredaq_codec.c  wiredaq_codec.h
firmware/test/: gen_golden_header.py  test_golden_vectors.c
ground_station/dashboard/: __init__.py  console_dashboard.py
ground_station/logger/: __init__.py  raw_logger.py
ground_station/receiver/: __init__.py  frame_receiver.py  stream_receiver.py
include/wiredaq/: wiredaq.hpp
protocol/: packet_schema.yaml
protocol/codec/: __init__.py  wiredaq_codec.py
protocol/golden/: README.md  reference_encoder.py  vectors.json
scenarios/: microdaq_10khz.lua  static_fire_faults.lua
site/: index.html
src/wiredaq/: __init__.py
src/wiredaq/cli/: serial.py  slice.py
src/wiredaq/daq_sim/collector/: collector.py
src/wiredaq/daq_sim/core/: __init__.py  clock.py  interfaces.py
src/wiredaq/daq_sim/nodes/: replay_node.py  synthetic_node.py
src/wiredaq/daq_sim/sinks/: csv_logger.py  metrics.py
src/wiredaq/daq_sim/transports/: __init__.py  impairment_transport.py  in_process.py  serial_transport.py  udp_transport.py
src/wiredaq/ground_station/dashboard/: __init__.py  console_dashboard.py
src/wiredaq/ground_station/logger/: __init__.py  raw_logger.py
src/wiredaq/ground_station/receiver/: __init__.py  frame_receiver.py  stream_receiver.py
src/wiredaq/protocol/: packet_schema.yaml
src/wiredaq/protocol/codec/: __init__.py  wiredaq_codec.py
src/wiredaq/protocol/golden/: README.md  reference_encoder.py  vectors.json
tests/: test_clock.py  test_codec_oracle.py  test_golden_vectors.py  test_heartbeat.py  test_impairment_timing.py  test_liveness.py  test_logger_replay.py  test_pipeline.py  test_stream_receiver.py  test_udp_transport.py
tools/daq_sim/collector/: collector.py
tools/daq_sim/core/: interfaces.py
tools/daq_sim/dashboard/: README.md  index.html
tools/daq_sim/nodes/: replay_node.py  synthetic_node.py
tools/daq_sim/sinks/: csv_logger.py  metrics.py
tools/daq_sim/transports/: impairment_transport.py  in_process.py  serial_transport.py  udp_transport.py
tools/dashboard/: README.md  index.html
