[package]
name = "wiredaq-rs"
version = "0.1.0"
edition = "2021"
description = "Rust experimental backend for WireDAQ packet encoding, decoding, and high-rate simulation."
license = "MIT"
publish = false

[lib]
name = "wiredaq_rs"
path = "src/lib.rs"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
